Responsive bootstrap tests
Testing responsiveness with columns

--- a/example5-bootstrap/index.html
+++ b/example5-bootstrap/index.html
@@ -8,7 +8,7 @@
     <body>
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col-12 col-lg-6">
                     <h1>Our menu</h1>
                     <h2>Falafel</h2>
                     <p>Chickpea, herbs and spices.</p>
@@ -18,7 +18,7 @@
                     <p>Lettuce, vegetables, muzzarella.</p>
                     <img src="images/pasta-salad.jpg" alt="Salad" class="img-fluid">
                 </div>
-                <div class="col">
+                <div class="col-12 col-lg-6">
                     <h2>Prices</h2>
                     <table class="table">
                         <tr>
